# Production-plan-optimization

./: .flake8  Model1.py  Model2.py  Model3.py  Model3bis.py  Model4  Model5.py  README.md  pyproject.toml
Model/: a
Model1/: Model1.py
Model2/: Model2.py
Planning_optimization_part1/: .flake8  .gitignore  Model1.py  Model2.py  Planning_optimization.lp  README.md  planning_time_model1.html
Planning_optimization_part2/: Model2.py  Model3.py  planning_time_model2.html  planning_time_model3.html
Planning_optimization_part3/: Capacity.csv  Constraints.xlsx  Customer_orders.csv  Customer_orders.xlsx  Inventory.html  Inventory_Shortage.html  Model4.py  Planning_model4.csv  Planning_model4_list.csv  Planning_model4v2.csv  Requirement.xlsx  planning_MO_model4.html  planning_load_model4.html  planning_time_model4.html  test.py  test2.py
Planning_optimization_part4/: Changeover.py  Constraints.xlsx  Model4.py  Model5.py  Planning_model4v2.csv  temp.py
temp/: Model3.py
