[tool.poetry]
name = "production-plan-optimization"
version = "0.1.0"
description = ""
authors = ["soulabat"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
matplotlib = "^3.3.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
bandit = "^1.6.2"
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
